# 45s-strategy

./: .gitignore  CLAUDE.md  Cargo.toml  GOALS.md  README.md  TODO.md  learning-this-stuff.md  pyproject.toml
docs/: stage-0.md
examples/: bench_hands_per_sec.rs
python/f45/: __init__.py  tournament.py
python/f45/strategies/: __init__.py  base.py  l1_novice.py  l2_basic.py
scripts/: ablate_l2.py  l1_self_play.py  ladder.py  smoke.py
src/: bindings.rs  cards.rs  error.rs  lib.rs  ranker.rs  rules.rs  state.rs
tests/: golden_corpus.rs  proptest_invariants.proptest-regressions  proptest_invariants.rs  test_l1.py  test_l2.py
