[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "f45"
version = "0.1.0"
description = "45s card game engine, Python-facing package"
requires-python = ">=3.10"

[tool.maturin]
python-source = "python"
module-name = "f45._engine"
features = ["extension-module"]
